fix: whitespace between message
Seen-by height was 1rem no matter if something was inside the div or not.
Now, has a max-height of 1rem and min-height 0

--- a/src/components/WindowConversation/WindowConversation.css
+++ b/src/components/WindowConversation/WindowConversation.css
@@ -243,7 +243,8 @@
 }
 
 .seen-by {
-  height: 1rem;
+  min-height: 0;
+  max-height: 1rem;
   width: 100%;
   display: flex;
   justify-content: end;
